--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
     mode: HTML5
   datasource:
         name: test
-#        url: jdbc:mysql://localhost:3306/library?characterEncoding=utf8
         url: jdbc:mysql://localhost:3306/library?characterEncoding=utf8
+#        url: jdbc:mysql://localhost:3306/library?characterEncoding=utf8
         username: root
-#        password: Abcd1234
-        password: wangmeng
+        password: Abcd1234
+#        password: wangmeng
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
